# bosscore-mcp-pack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  server.py  server_http.py
docs/: architecture.md  security.md
src/bosscore_mcp/: __init__.py  app.py  server.py  server_http.py  settings.py
src/bosscore_mcp/batch/: __init__.py
src/bosscore_mcp/coordination/: __init__.py  store.py
src/bosscore_mcp/core/: __init__.py  auth.py  errors.py  logging.py  oauth.py  plan_store.py  registry.py  results.py
src/bosscore_mcp/deploy/: __init__.py
src/bosscore_mcp/documents/: __init__.py  policy.py  provider.py  service.py
src/bosscore_mcp/exec/: __init__.py
src/bosscore_mcp/git/: __init__.py
src/bosscore_mcp/health/: __init__.py
src/bosscore_mcp/wordpress/: __init__.py  client.py  provider.py
tests/: conftest.py  test_contracts.py  test_coordination_store.py  test_deploy.py  test_documents.py  test_security.py
tools/: handlers.py  schemas.py
