[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bosscore-mcp-pack"
version = "0.4.0"
description = "PACTE-BOSS — multi-agent coordination MCP pack: sessions, claims, conflicts, events, handoffs, workspaces, integration. 100+ tools across WordPress, Git, Deploy, Exec, Health, Documents, Batch, Coordination."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1",
  "mcp>=1.28,<2",
  "starlette>=0.46,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
documents = [
  "markitdown>=0.1,<1",
  "pillow>=10,<13",
  "pypdf>=5,<7",
  "pytesseract>=0.3,<1",
]
audio = [
  "faster-whisper>=1,<2",
  "moviepy>=2,<3",
]
all = [
  "bosscore-mcp-pack[documents,audio]",
]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
bosscore-mcp = "bosscore_mcp.server:cli"
bosscore-mcp-http = "bosscore_mcp.server_http:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
